# -EDD-Proyecto_202300350

fase1/: availablePosts.dot  graph.dot  graph_matrix.dot  posts.dot  solicitudes.dot  solicitudes_enviadas.dot  solicitudes_recibidas.dot  usuarios.dot
fase1/models/headers/: Post.h  Request.h  User.h
fase1/src/: Post.cpp  Request.cpp  User.cpp  auth.cpp  main.cpp  publicaciones.json  solicitudes.json  usuarios.json
fase1/src/headers/: auth.h
fase1/structures/List/: list.cpp  node.cpp
fase1/structures/List/headers/: list.h  node.h
fase1/structures/Stack/: Stack.cpp  Stack.h
fase1/structures/doublyCircleList/: list.cpp  list.h
fase1/structures/doublyList/: list.cpp  node.cpp
fase1/structures/doublyList/headers/: list.h  node.h
fase1/structures/friendList/: list.cpp  list.h
fase1/structures/linkedList/: list.cpp  node.cpp
fase1/structures/linkedList/headers/: list.h  node.h
fase1/structures/matrix/: main.cpp
fase1/structures/matrix/matrix/: matrix.cpp  matrixNode.cpp
fase1/structures/matrix/matrix/headers/: matrix.h  node.h
fase1/structures/matrix/simpleList/: node.cpp  simpleList.cpp
fase1/structures/matrix/simpleList/headers/: node.h  simpleList.h
fase2/SocialStructure/: CMakeLists.txt  adminview.cpp  adminview.h  adminview.ui  appstage.cpp  appstage.h  commentform.cpp  commentform.h  commentform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  postform.cpp  postform.h  postform.ui  register.cpp  register.h  register.ui  user.cpp  user.h  userview.cpp  userview.h  userview.ui
fase2/SocialStructure/models/: comment.cpp  comment.h  post.cpp  post.h  request.cpp  request.h
fase2/SocialStructure/structures/: avl.cpp  avl.h  bst.cpp  bst.h  btree.cpp  btree.h  doublylist.cpp  doublylist.h  friendlist.cpp  friendlist.h  list.cpp  list.h  stack.cpp  stack.h
fase2/SocialStructure/structures/matrix/matrix/: matrix.cpp  matrix.h  matrixnode.cpp  matrixnode.h
fase2/SocialStructure/structures/matrix/simpleList/: listnode.cpp  listnode.h  simplelist.cpp  simplelist.h
